--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>AR Debug</title>
+<title>AR Debug Test</title>
 <style>
-#debug { position:fixed; top:0; left:0; width:100%; height:150px; background:black; color:lime; font:10px monospace; padding:10px; overflow:scroll;#debug { position:fixed; top:0; left:0; width:100%; height:110px; z-index:10000; }
-</style>
-<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm@3.21.0/dist/tf-backend-wasm.min.js"></script>
-<script>
-let log=[];
-function debug(msg){
-  log.push(new Date().toTimeString().substr(0,8) + ": " + msg);
-  document.ge  document.ge  document.ge  document.ge  document.ge  document.ge  documenog(msg);
+#debug {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background: black;
+  color: lime;
+  font: 12px monospace;
+  padding: 10px;
+  overflow: scroll;
+  z-index: 9999;
+  border: 2px solid lime;
 }
-window.addEvwindow.addEvwindow.addEvwindow.addEvwindow.addEvwindow;
-  try {
-    debug("Setting WASM paths");
-    tf.wasm.setWasmPaths("/js/");
-    debug("Setting backend to WASM");
-    await tf.setBackend("wasm");
-    await tf.ready();
-    debug("TF ready: " + tf.getBackend());
-  } catch(e) {
-    debug("WASM failed: " + e.message);
-    try {
-      await tf.setBackend("webgl");
-      await tf.ready();
-      debug("WebGL ready: " + tf.getBackend());
-    } catch(e2) {
-      debug("All TF backends failed: " + e2.message);
-    }
-  }
-});
-</script>
-<script src="./js/mindar-image-aframe.prod.js" defer></script>
-<script src="./assets/dpdb.json" defer></script>
+</style>
 </head>
 <body>
-<div id="debug">Debug starting...</div>
-<button id="toggle" onclick="document.getElementById(\"debug\").style.display=document.getElementById(\"debug\").style.display===\"none\"?\"block\":\"none\"">Toggle</button>
-<a-scene mindar-image="imageTargetSrc: assets/targets.mind" embedded>
-<a-assets><a-asset-item id="model" src="assets/test_fun_shape_animated.glb"></a-asset-item></a-assets>
-<a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-<a-entity mindar-image-target="targetIndex: 0">
-<a-entity gltf-model="#model" scale="0.4 0.4 0.4"></a-entity>
-</a-entity>
-</a-scene>
+<div id="debug">Debug starting...<br></div>
+<script>
+function log(msg) {
+  const div = document.getElementById('debug');
+  const time = new Date().toTimeString().substr(0,8);
+  div.innerHTML += time + ': ' + msg + '<br>';
+  div.scrollTop = div.scrollHeight;
+  console.log(msg);
+}
+
+log('HTML loaded');
+log('User agent: ' + navigator.userAgent.substr(0,40));
+
+// Test basic functionality
+setTimeout(() => {
+  log('5 second test - page still alive');
+}, 5000);
+</script>
 </body>
 </html>
