Fix: Use local scripts instead of blocked CDNs

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>AR Debug Test</title>
-<style>
-#debug {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 150px;
-  background: black;
-  color: lime;
-  font: 12px monospace;
-  padding: 10px;
-  overflow: scroll;
-  z-index: 9999;
-  border: 2px solid lime;
-}
-</style>
-</head>
-<body>
-<div id="debug">Debug starting...<br></div>
-<script>
-function log(msg) {
-  const div = document.getElementById('debug');
-  const time = new Date().toTimeString().substr(0,8);
-  div.innerHTML += time + ': ' + msg + '<br>';
-  div.scrollTop = div.scrollHeight;
-  console.log(msg);
-}
-
-log('HTML loaded');
-log('User agent: ' + navigator.userAgent.substr(0,40));
-
-// Test basic functionality
-setTimeout(() => {
-  log('5 second test - page still alive');
-}, 5000);
-</script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>AR Test</title></head><body><h1>Testing Local Scripts</h1><script src="./js/aframe.min.js"></script><script>setTimeout(()=>{document.body.innerHTML += "<p>A-Frame: " + (typeof AFRAME !== "undefined") + "</p>";}, 2000);</script></body></html>
