Fix AR project structure and functionality - Fix missing asset references and broken file paths - Add comprehensive error handling and debugging - Improve model-viewer initialization and AR functionality - Add missing CSS styles for AR components - Update public/index.html to redirect to main AR app - Add vercel.json configuration for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><title>AR Test</title></head><body><h1>Testing Local Scripts</h1><script src="./js/aframe.min.js"></script><script>setTimeout(()=>{document.body.innerHTML += "<p>A-Frame: " + (typeof AFRAME !== "undefined") + "</p>";}, 2000);</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>LCS+E AR Experience</title>
+  <meta http-equiv="refresh" content="0; url=../ar.html">
+</head>
+<body>
+  <p>Redirecting to AR Experience...</p>
+  <p><a href="../ar.html">Click here if not redirected automatically</a></p>
+</body>
+</html>
