Add MindAR integration with marker-based AR
- Create mindar.html with A-Frame + MindAR implementation
- Add marker-based AR using targets.mind file
- Include mode toggle between Web AR and Marker AR
- Add TensorFlow.js initialization for MindAR
- Add marker detection and animation control
- Add navigation link from main page to MindAR version
- Preserve all existing web AR functionality
- Ready for marker-based AR testing

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,9 @@
         <div class="brand-dot"><img src="/assets/lcse-logo-AR-loader.png" alt="LCS+E"></div>
       </div>
       <h1 class="title">Mural AR Experience</h1>
-      <div class="right"></div>
+      <div class="right">
+        <a href="/mindar.html" class="btn" style="text-decoration: none;">Marker AR</a>
+      </div>
     </header>
 
     <!-- Loader -->
