Add advanced MindAR integration with Three.js and comprehensive AR mode selection
- Create mindar-advanced.html with Three.js + MindAR implementation
- Add professional UI/UX with smooth tracking algorithms
- Copy working MindAR vendor files from successful project
- Add brand.css for consistent styling across all modes
- Create landing.html with AR mode selection interface
- Update navigation between all three AR modes:
  * Web AR (Model Viewer + USDZ)
  * A-Frame AR (MindAR + A-Frame)
  * Advanced AR (Three.js + MindAR)
- Add vercel.json routes for clean URLs
- Implement advanced features from working MindAR project:
  * Smooth position/rotation interpolation
  * Professional error handling
  * Status indicators and instructions
  * Optimized model loading and animation
- Ready for production testing with all AR approaches

--- a/public/mindar.html
+++ b/public/mindar.html
@@ -240,8 +240,9 @@
 
     <!-- Mode Toggle -->
     <div class="mode-toggle">
-      <button class="btn active" id="webModeBtn">Web AR</button>
-      <button class="btn" id="mindarModeBtn">Marker AR</button>
+      <a href="/index.html" class="btn">Web AR</a>
+      <span class="btn active">A-Frame AR</span>
+      <a href="/mindar-advanced.html" class="btn">Advanced AR</a>
     </div>
 
     <!-- Gesture hint -->
