--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,8 @@
       </div>
       <h1 class="title">Mural AR Experience</h1>
       <div class="right">
-        <a href="/mindar.html" class="btn" style="text-decoration: none;">Marker AR</a>
+        <a href="/mindar.html" class="btn" style="text-decoration: none; margin-right: 0.5rem;">A-Frame AR</a>
+        <a href="/mindar-advanced.html" class="btn" style="text-decoration: none;">Advanced AR</a>
       </div>
     </header>
 
