Add comprehensive MindAR marker scaling and positioning tools
- Create mindar-debug.html: Interactive real-time scaling tool
  * Live sliders for scale, position, rotation
  * Real-time preview with actual model
  * Export code directly to implementation
  * Save/load presets functionality
  * Copy-paste ready code generation

- Add Blender addon (tools/blender_mindar_addon.py):
  * Professional workflow for model scaling
  * Marker reference plane creation
  * Auto-scale model to marker size
  * Export/import settings functionality
  * Visual marker size reference

- Create comprehensive guide (tools/MINDAR_SCALING_GUIDE.md):
  * Step-by-step workflows for all methods
  * Troubleshooting and pro tips
  * Device-specific considerations
  * Resource links and best practices

- Update navigation and routing:
  * Add debug tool to landing page
  * Add /debug route to vercel.json
  * Integrate with existing AR mode selection

- Provide multiple scaling approaches:
  1. Real-time debug tool (fastest)
  2. Blender addon (professional)
  3. Manual code adjustment (developer)
  4. Online tools and libraries

Ready for production marker scaling and positioning!

--- a/public/landing.html
+++ b/public/landing.html
@@ -270,6 +270,7 @@
 
     <div class="cta">
       <a class="cta-primary" href="/index.html">🚀 Start with Web AR</a>
+      <a class="cta-secondary" href="/mindar-debug.html">🎯 Debug Tool</a>
       <a class="cta-secondary" href="/assets/lcse-logo-AR-loader.png" download>🖨️ Download Marker</a>
     </div>
   </main>
