Integrate new MindAR marker target file and create comprehensive marker guide
- Update all MindAR implementations to use new targets.mind file:
  * mindar.html (A-Frame AR)
  * mindar-advanced.html (Three.js AR)
  * mindar-debug.html (Debug Tool)
  * New file location: /assets/markers/targets.mind

- Create marker printing reference page:
  * /assets/markers/print-marker.html
  * Exact 10cm × 10cm marker template
  * Detailed printing instructions
  * Size verification guide
  * Print-optimized styling

- Add comprehensive new marker guide:
  * tools/NEW_MARKER_GUIDE.md
  * Feature detection analysis
  * Scaling recommendations based on mural complexity
  * Step-by-step testing workflow
  * Troubleshooting and optimization tips

- Analyze marker characteristics:
  * High contrast (black/white/gray) ✅
  * Dense feature points for reliable tracking ✅
  * Complex, unique patterns ✅
  * Sharp edges and corners ✅

Ready for marker printing and AR testing with optimized tracking!

--- a/public/mindar-debug.html
+++ b/public/mindar-debug.html
@@ -293,7 +293,7 @@ container.rotation.set(${controls.rotation.x * Math.PI / 180}, ${controls.rotati
       try {
         mindarThree = new MindARThree({
           container: document.querySelector('#ar-container'),
-          imageTargetSrc: '/assets/targets.mind',
+          imageTargetSrc: '/assets/markers/targets.mind',
           filterMinCF: 0.0005,
           filterBeta: 0.02,
           warmupTolerance: 4,
