--- a/public/mindar.html
+++ b/public/mindar.html
@@ -255,7 +255,7 @@
     <!-- A-Frame Scene with MindAR -->
     <a-scene 
       id="aframeScene"
-      mindar-image="imageTargetSrc: /assets/targets.mind" 
+      mindar-image="imageTargetSrc: /assets/markers/targets.mind" 
       color-space="sRGB" 
       embedded 
       renderer="antialias: true; precision: medium; colorManagement: true; physicallyCorrectLights: true"
