--- a/public/mindar-advanced.html
+++ b/public/mindar-advanced.html
@@ -263,7 +263,7 @@
 
         mindarThree = new MindARThree({
           container: document.querySelector('#ar-container'),
-          imageTargetSrc: '/assets/targets.mind',
+          imageTargetSrc: '/assets/markers/targets.mind',
           filterMinCF: 0.0005,
           filterBeta: 0.02,
           warmupTolerance: 4,
